# VeriBounty

./: .gitignore  Anchor.toml  Cargo.toml  deploy.sh  rust-toolchain.toml
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: BountyCard.tsx  Footer.tsx  Navbar.tsx  StatusBadge.tsx  WalletProvider.tsx
app/src/lib/: anchorClient.ts  blockchain.ts  mockBlockchain.ts  mockData.ts  veri_bounty_idl.json
app/src/pages/: BountyDetailPage.tsx  HomePage.tsx  MyProfilePage.tsx  SubmitClaimPage.tsx
app/src/types/: index.ts
backend/: .env.example  README.md  package-lock.json  package.json
backend/src/: app.ts  server.ts
backend/src/config/: database.ts  env.ts
backend/src/middleware/: errorHandler.ts  validate.ts
backend/src/models/: Claim.ts  Evidence.ts  Reputation.ts
backend/src/routes/: claimRoutes.ts  evidenceRoutes.ts  reputationRoutes.ts
backend/src/schemas/: claimSchemas.ts  common.ts  evidenceSchemas.ts  reputationSchemas.ts
backend/src/services/: preScreenClaim.ts
programs/veri_bounty/: Cargo.toml
programs/veri_bounty/src/: lib.rs
