[package]
name = "veri_bounty"
version = "0.1.0"
description = "Solana escrow bounty program (Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "veri_bounty"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
